adding charts and data

--- a/report/report.tex
+++ b/report/report.tex
@@ -122,7 +122,7 @@ On the other hand it could be that what would have been a temporary dip in produ
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}[H]{.4\textwidth}
-		\includegraphics[width=\textwidth]{../113chart.png}
+		\includegraphics[width=\textwidth]{../charts/113chart.png}
 		\caption*{Figure 2}
 	\end{subfigure}
 \end{figure}
@@ -131,19 +131,14 @@ Were we able to show that this circumstance is unique to the most recent session
 %To perform this analysis we will rely heavily on the academic works of a few authors. The 
 \section*{Acquisition and Processing of the Data}
 \subsection*{Source of the Data}
-The Congressional cosponsorship data that we will be using is from Joshua Tauberer and his website GovTrack.us. In 2004, Tauberer founded GovTrack.us and used the cosponsorship data to establish leadership and ideological scores for each Senator and Representative of Congress from the 93rd Congress forward. The method of generating these metrics will be discussed at a further point in the paper. Tauberer has made the data on his website freely available with an open API and bulk downloading options. 
+The Congressional cosponsorship data that we will be using is from Joshua Tauberer and his website {\color{blue}\href{http://govtrack.us}{GovTrack.us}}. In 2004, Tauberer founded GovTrack.us and used the cosponsorship data to establish leadership and ideological scores for each Senator and Representative of Congress from the 93rd Congress forward. The method of generating these metrics will be discussed at a further point in the paper. Tauberer has made the data on his website freely available with an open API and bulk downloading options. 
 
 \newpage
 \begin{figure}[p]
-    \vspace*{-2cm}
-    \makebox[\linewidth]{
-  		\includegraphics[width=.6\linewidth]{../93chart.png}  	
-        \includegraphics[width=.6\linewidth]{../94chart.png}
-    }\\
-    \makebox[\linewidth]{
-  		\includegraphics[width=.6\linewidth]{../93chart.png}  	
-        \includegraphics[width=.6\linewidth]{../94chart.png}
+    \vspace*{-2cm} %\hspace*{-2cm}
+    \makebox[1\linewidth]{
+  		\includegraphics[width=1.2\linewidth]{../full.png}  	
     }
-    \caption{Sequence diagram}
+    \caption*{Figure 3 \\ Starts at top left and goes down each column}
 \end{figure}
 \end{document}
