adding charts and data

--- a/report/report.tex
+++ b/report/report.tex
@@ -67,7 +67,7 @@
 \headsep=0.25in         %
 
 % Make title
-\title{\vspace{2in}\textsf{\textmd{\textbf{\hmwkClass:\ \hmwkTitle\ifthenelse{\equal{\hmwkSubTitle}{}}{}{\\\hmwkSubTitle}}}\\\normalsize\vspace{0.1in}\\\vspace{0.1in}}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}}\vspace{3in}}
+\title{\vspace{2in}\textsf{\textmd{\textbf{{\Huge \hmwkClass:\ \hmwkTitle}\vspace{.2in}\hrule\vspace{.1in}\ifthenelse{\equal{\hmwkSubTitle}{}}{}{\\\hmwkSubTitle}}}\\\normalsize\vspace{0.1in}\\\vspace{0.1in}}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}}\vspace{3in}}
 \date{}
 \author{\textbf{\hmwkAuthorName}}
 
