just cleaning up

--- a/report/report.tex
+++ b/report/report.tex
@@ -18,6 +18,7 @@
 \usepackage{mathtools}
 \usepackage{bbm}
 \usepackage{amsfonts}
+%\usepackage{titling}
 \usepackage{cancel}
 \usepackage{chngpage}
 \usepackage{tikz}
@@ -81,8 +82,10 @@
 % Pattern Recognition and Machine Learning -- Bishop
 
 \begin{document}
-
+\begin{titlegpage}
 \maketitle
+\thispagestyle{empty}
+\end{titlepage}
 \newpage
 %
 %
@@ -133,7 +136,20 @@ Were we able to show that this circumstance is unique to the most recent session
 \subsection*{Source of the Data}
 The Congressional cosponsorship data that we will be using is from Joshua Tauberer and his website {\color{blue}\href{http://govtrack.us}{GovTrack.us}}. In 2004, Tauberer founded GovTrack.us and used the cosponsorship data to establish leadership and ideological scores for each Senator and Representative of Congress from the 93rd Congress forward. The method of generating these metrics will be discussed at a further point in the paper. Tauberer has made the data on his website freely available with an open API and bulk downloading options. 
 
+\newpage \quad
+\newpage 
+\section*{Statistical Methods}
+\subsection*{Linear Model}
 \newpage
+\subsection*{Generalized Additive Model}
+\newpage
+\subsection*{Categorical Analysis}
+\newpage
+\section*{Conclusion}
+\newpage
+\section*{Literature Review}
+\newpage
+\section*{Bibliography}
 \begin{figure}[p]
     \vspace*{-2cm} %\hspace*{-2cm}
     \makebox[1\linewidth]{
